--- a/style.css
+++ b/style.css
@@ -1,3 +1,6 @@
+body{
+    background-color: rgba(0, 0, 0, 0.021);
+}
 .container{
     max-width: 400px;
     margin: 10vh auto;
@@ -7,6 +10,7 @@
     height: 70px;
     line-height: 70px;
     padding: 16px 8px;
+    text-align: right;
     font-size: 26px;
 
 }
@@ -24,7 +28,7 @@
 }
 .button{
     border: 0.5px solid #999;
-    line-height: 100px;
+    line-height: 90px;
     text-align: center;
     font-size: 24px;
     cursor: pointer;
@@ -38,4 +42,20 @@
     color: white;
     font-size: 21px;
     transition: all 0.4s ease-in-out;
+}
+.source{
+    text-align: center;
+}
+footer{
+    text-align: center;
+}
+footer img{
+    width: 35px;
+    height: 35px;
+    margin: 0px 5px;
+}
+footer img:hover{
+    width: 40px;
+    height: 40px;
+    transition: all 0.5s ease-in-out;
 }
